[gd_scene load_steps=3 format=3 uid="uid://brk4lgk6qppxw"]

[ext_resource type="Script" path="res://2_MVC_WAB/Tank_WAB/tscn/List_Item_My_Book/List_Item_My_Book.gd" id="1_bkr3x"]
[ext_resource type="Texture2D" uid="uid://d1w6cpb81gj4y" path="res://9_My_assets/1_assats/A_53.png" id="2_l1ecd"]

[node name="List_Item_My_Book" type="Label"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = -564.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 15
text = "wertertet
erter
ertrt"
script = ExtResource("1_bkr3x")

[node name="but_2" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 3.0
offset_right = 93.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 13
texture_normal = ExtResource("2_l1ecd")
ignore_texture_size = true
stretch_mode = 0

[node name="but_1" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 92.0
offset_top = -1.0
offset_right = 187.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 13
texture_normal = ExtResource("2_l1ecd")
ignore_texture_size = true
stretch_mode = 0

[node name="but_0" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 188.0
offset_right = 282.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 13
texture_normal = ExtResource("2_l1ecd")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="but_2" to="." method="_on_but_3_pressed"]
[connection signal="pressed" from="but_1" to="." method="_on_but_2_pressed"]
[connection signal="pressed" from="but_0" to="." method="_on_but_1_pressed"]
